--- a/docs/数据库/数据库隔离级别.md
+++ b/docs/数据库/数据库隔离级别.md
@@ -1,4 +1,6 @@
-## 数据库隔离级别
+# 数据库隔离级别
+
+## 隔离级别
 
 ```
 转载 https://www.cnblogs.com/dwxt/p/8807899.html
@@ -32,6 +34,11 @@
 ４. serializable ：这是花费最高代价但是最可靠的事务隔离级别。事务被处理为顺序执行。
       除了防止脏读，不可重复读外，还避免了幻像读。 
 
+```
+
+## 第1级别：Read Uncommitted
+
+```
 我们使用 test 数据库，新建 tx 表：－－－ＭｙＳＱＬ数据库
 
 第1级别：Read Uncommitted(读取未提交内容)
@@ -104,6 +111,12 @@ select * from tx;
 |    3 |    3 |
 +------+------+
 
+```
+
+## 第2级别：Read Committed
+
+```
+
 第2级别：Read Committed(读取提交内容)
 
 (1)这是大多数数据库系统的默认隔离级别（但不是MySQL默认的）
@@ -168,6 +181,12 @@ select * from tx; --------------->
 |    3 |    3 |
 +------+------+
 
+```
+
+## 第3级别：Repeatable Read
+
+```
+
 第3级别：Repeatable Read(可重读)
 (1)这是MySQL的默认事务隔离级别
 (2)它确保同一事务的多个实例在并发读取数据时，会看到同样的数据行
@@ -229,6 +248,12 @@ select * from tx;
 |    2 |    2 |
 |    3 |    3 |
 +------+------+
+
+```
+
+## 第4级别：Serializable
+
+```
 
 第4级别：Serializable(可串行化)
 (1)这是最高的隔离级别
