--- a/docs/书法/古文诗词.md
+++ b/docs/书法/古文诗词.md
@@ -1,7 +1,7 @@
 # 古文诗词
 
 
-> [人心惟危]( https://gitlab.com/xuyq123/calligraphy/-/blob/master/%E5%8F%A4%E6%96%87%E8%AF%97%E8%AF%8D.md )，[道心惟微]( https://www.toutiao.com/a7003283856115827211 )；[惟精惟一]( https://mp.weixin.qq.com/s?__biz=Mzg4NDY2OTM0Mg==&mid=2247483806&idx=1&sn=4500613e5f147e17ad98fec394cfdffa )，[允执厥中]( https://baijiahao.baidu.com/s?id=1710313154461293046 )。
+> [人心惟危]( https://xushufa.cn )，[道心惟微]( https://www.toutiao.com/a7003283856115827211 )；[惟精惟一]( https://mp.weixin.qq.com/s?__biz=Mzg4NDY2OTM0Mg==&mid=2247483806&idx=1&sn=4500613e5f147e17ad98fec394cfdffa )，[允执厥中]( https://baijiahao.baidu.com/s?id=1710313154461293046 )。
 
 > 天行健，君子以自强不息。地势坤，君子以厚德载物。
 
