--- a/docs/书法/徐书法.md
+++ b/docs/书法/徐书法.md
@@ -8,7 +8,7 @@
 
 ## 二、书法练习轨迹
 
-于2020年9月20开始练习书法，且将练习记录及字帖记录在gitee、gitlab、github等代码托管平台，建立项目仓库《书法练习轨迹》 [calligraphy]( https://gitlab.com/xuyq123/calligraphy )。
+于2020年9月20开始练习书法，且将练习记录及字帖保存在gitee、gitlab、github等代码托管平台，建立项目仓库《书法练习轨迹》 [calligraphy]( https://gitlab.com/xuyq123/calligraphy )。
 
 仓库中主要有四类文件《书法练习轨迹ReadMe》、《书法练习轨迹--明月几时有》、书法练习轨迹图片、其他相关文档。 <br/>
 * 《书法练习轨迹ReadMe》是自述文件，是git平台的README，作自我介绍之意。包含书法练习轨迹在各个平台的链接。 <br/>
@@ -99,8 +99,9 @@
 书法练习轨迹是书法练习记录，无为徐生是我的笔名，徐书法则是两者结合。 <br/>
 徐书法是我的书法，是无为徐生的书法，是书法练习轨迹的目标，是我练习书法的梦想。 <br/>
 
-最后附上我喜欢的两句话： <br/>
+最后附上我喜欢的三句话： <br/>
 * 用自己的方式度过这一生。 <br/>
+* 人情必有所寄，习惯而成自然。 <br/>
 * 路漫漫其修远兮，吾将上下而求索。 <br/>
 
 ---
