--- a/docs/关于我.md
+++ b/docs/关于我.md
@@ -39,6 +39,8 @@
 
 <br/>
 
+
+
 ## 账号
 
 > git项目：书法练习轨迹
@@ -62,9 +64,12 @@
 <br/>
 
 
+
+## 网站
+
 > 我的网站：徐书法 `xushufa.cn`
 
-**个人程序员笔记及书法练习轨迹。**
+**生活随笔-编程笔记-书法练习轨迹。**
 
 | 徐书法 | 我的网站    |  备注          |
 | -----  | ----------- |  ------------- |
@@ -77,9 +82,7 @@
 
 ---
 
-
 <br/>
-
 
 > 相关网站
 
@@ -90,11 +93,12 @@
 | 1      | [tool.xushufa.cn]( https://tool.xushufa.cn ) | 工具网站。在线预览markdown、解析json、url解码、时间戳转换等。  |
 | 2      | [md.xushufa.cn]( https://md.xushufa.cn )     | xushufa网站地图，nginx网页目录结构。|
 
-
 ---
 
-
 <br/>
+
+
+
 
 > 个人邮箱 
 
