--- a/docs/书法/书法/文徵明小楷《草堂十志》.md
+++ b/docs/书法/书法/文徵明小楷《草堂十志》.md
@@ -13,6 +13,8 @@
 卢鸿 唐代画家,一作鸿一,字颢然,亦作浩然,范阳(今河北涿县)人,家洛阳(今属河南).玄宗开元六年(718)征为谏议大夫,固辞不就.隐居嵩山,有草堂一所,尝聚徒至五百人.工籀篆楷隶,善画山水树石,笔墨清逸,得平远之趣.
 ```
 
+## 嵩山草堂
+
 ![1]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/caotangshizhi/1.jpg )
 
 ![2]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/caotangshizhi/2.jpg )
@@ -22,6 +24,9 @@
 ![4]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/caotangshizhi/4.jpg )
 
 ![5]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/caotangshizhi/5.jpg )
+
+
+## 倒景壹者
 
 ![6]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/caotangshizhi/6.jpg )
 
@@ -33,12 +38,12 @@
 
 ![10]( https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/shufa/caotangshizhi/10.jpg )
 
----
----
+
+## 全文
 
 >草堂十志-卢鸿
 
-- 草堂者，盖因自然之溪阜，以当墉洫；资人力之缔架，复加茅茨。
+- 嵩山草堂者，盖因自然之溪阜，以当墉洫；资人力之缔架，复加茅茨。
 将以避燥湿，成栋宇之用；昭简易，叶乾坤之德，道可容膝休闲。
 谷神同道，此其所贵也。及靡者居之，则妄为剪饰，失天理矣。
 - 词曰：
