--- a/docs/书法/书法/多宝塔碑.md
+++ b/docs/书法/书法/多宝塔碑.md
@@ -2,13 +2,13 @@
 
 <br />
 
-```
-《多宝塔碑》，全称《大唐西京千福寺多宝佛塔感应碑》，是唐天宝十一年（752年）由当时的文人岑勋撰文、书法家徐浩题额、书法家颜真卿书丹、碑刻家史华刻石而成，是楷书书法作品。现今保存于西安碑林第二室。
 
-此碑共三十四行，满行六十六字，内容主要记载了西京龙兴寺禅师楚金创建多宝塔之原委及修建经过。整体秀美刚劲，清爽宜人，有简洁明快，字字珠玑之感。用笔丰厚遒美，腴润沉稳；横细竖粗，对比强烈；
-起笔多露锋，收笔多锋，转折多顿笔。结体严谨道密，紧凑规整，平稳匀称，又碑版精良，存字较多，学颜体者多从此碑下手，入其堂奥。
+- 《多宝塔碑》，全称《大唐西京千福寺多宝佛塔感应碑》，是唐天宝十一年（752年）由当时的文人岑勋撰文、书法家徐浩题额、书法家颜真卿书丹、碑刻家史华刻石而成，是楷书书法作品。现今保存于西安碑林第二室。
 
-```
+
+- 此碑共三十四行，满行六十六字，内容主要记载了西京龙兴寺禅师楚金创建多宝塔之原委及修建经过。整体秀美刚劲，清爽宜人，有简洁明快，字字珠玑之感。用笔丰厚遒美，腴润沉稳；横细竖粗，对比强烈；起笔多露锋，收笔多锋，转折多顿笔。结体严谨道密，紧凑规整，平稳匀称，又碑版精良，存字较多，学颜体者多从此碑下手，入其堂奥。
+
+
 
 <br/>
 
