--- a/docs/书法/书法/文徵明小楷《草堂十志》.md
+++ b/docs/书法/书法/文徵明小楷《草堂十志》.md
@@ -2,16 +2,15 @@
 
 <br />
 
-```
-文徵明（1470年11月28日－1559年3月28日），原名壁（或作璧），字徵明，四十二岁起，以字行，更字徵仲。因先世为衡山人，故号衡山居士，世称“文衡山”。南直隶苏州府长洲县（今江苏苏州）人。明代画家、书法家、文学家、鉴藏家。
-文徵明曾学文于吴宽，学书法于李应祯，学画于沈周，生平九次参加乡试均不中。嘉靖二年（1523年），以岁贡生参加吏部考试，被授予翰林院待诏之职。嘉靖五年（1526年），文徵明辞官归乡，专事创作。 [1] 
-嘉靖三十八年（1559年）二月二十，文徵明去世，享年九十。其弟子私谥贞献。
-文徵明诗、文、书、画无一不精，人称“四绝”，其与沈周共创“吴派”。在画史上与沈周、唐寅、仇英合称“明四家”。在文学上，与祝允明、唐寅、徐祯卿并称“吴中四才子”。
-```
 
-```
-卢鸿 唐代画家,一作鸿一,字颢然,亦作浩然,范阳(今河北涿县)人,家洛阳(今属河南).玄宗开元六年(718)征为谏议大夫,固辞不就.隐居嵩山,有草堂一所,尝聚徒至五百人.工籀篆楷隶,善画山水树石,笔墨清逸,得平远之趣.
-```
+- 文徵明（1470年11月28日－1559年3月28日），原名壁（或作璧），字徵明，四十二岁起，以字行，更字徵仲。因先世为衡山人，故号衡山居士，世称“文衡山”。南直隶苏州府长洲县（今江苏苏州）人。明代画家、书法家、文学家、鉴藏家。
+- 文徵明曾学文于吴宽，学书法于李应祯，学画于沈周，生平九次参加乡试均不中。嘉靖二年（1523年），以岁贡生参加吏部考试，被授予翰林院待诏之职。嘉靖五年（1526年），文徵明辞官归乡，专事创作。
+- 嘉靖三十八年（1559年）二月二十，文徵明去世，享年九十。其弟子私谥贞献。
+- 文徵明诗、文、书、画无一不精，人称“四绝”，其与沈周共创“吴派”。在画史上与沈周、唐寅、仇英合称“明四家”。在文学上，与祝允明、唐寅、徐祯卿并称“吴中四才子”。
+
+
+- 卢鸿 唐代画家,一作鸿一,字颢然,亦作浩然,范阳(今河北涿县)人,家洛阳(今属河南).玄宗开元六年(718)征为谏议大夫,固辞不就.隐居嵩山,有草堂一所,尝聚徒至五百人.工籀篆楷隶,善画山水树石,笔墨清逸,得平远之趣.
+
 
 ## 嵩山草堂
 
