--- a/docs/书法/书法/灵飞经.md
+++ b/docs/书法/书法/灵飞经.md
@@ -2,11 +2,11 @@
 
 <br />
 
-灵飞经是道教经名，主要阐述存思之法。今道藏有《上清琼宫灵飞六甲左右上符》，一卷。《汉武内传》谓此经用于请命延算、长生久视、驱策众灵、役使鬼神。
+- 灵飞经是道教经名，主要阐述存思之法。今道藏有《上清琼宫灵飞六甲左右上符》，一卷。《汉武内传》谓此经用于请命延算、长生久视、驱策众灵、役使鬼神。
 
-《灵飞经》是唐代著名小楷之一，无名款。元袁桷，明董其昌皆以为唐钟绍京书，但启功先生认为只是无名经生所书。
+- 灵飞经是唐代著名小楷之一，无名款。元袁桷，明董其昌皆以为唐钟绍京书，但启功先生认为只是无名经生所书。
 
-钟绍京，字可大，虔州赣人。官至中书令，越国公。书学二王、褚、薛，在当时是享有盛名的书法家，时号“小钟”，也是收藏家，个人收藏名家真迹数百卷。《灵飞经》笔势圆劲，字体精妙。后人初习小楷多以此为范本。
+- 钟绍京，字可大，虔州赣人。官至中书令，越国公。书学二王、褚、薛，在当时是享有盛名的书法家，时号“小钟”，也是收藏家，个人收藏名家真迹数百卷。《灵飞经》笔势圆劲，字体精妙。后人初习小楷多以此为范本。
 
 
 
