--- a/docs/生活/随笔/短期远行必备物品.md
+++ b/docs/生活/随笔/短期远行必备物品.md
@@ -2,20 +2,21 @@
 
 <br />
 
-> 一天内短途游
+> 一天内出行 一两天短途游
 
 <br />
 
 ---
 
-包 伞 水杯 手套 卫生纸 几个糖果   
-充电宝及其充电线
+身份证，手机，钥匙，钱包，公交卡，门禁卡，耳机，充电宝及其充电线。（伸手要钱）  <br /> 
 
 ---
 
-身份证，手机，钥匙，钱包，公交卡，门禁卡，耳机，充电宝及其充电线。（伸手要钱）
-背包，雨伞，水杯（茶）。
-牙刷，牙膏，毛巾，洗发水，大宝，衣服，袜子，耳塞。
+背包，雨伞，水杯，手套，卫生纸，几个糖果。（包 伞 茶 纸 糖）  <br /> 
+
+---
+
+牙刷，牙膏，毛巾，洗发水，大宝，衣服，袜子，耳塞。  <br /> 
 
 --2018
 
