--- a/docs/书法/书法/《兜沙经》书法.md
+++ b/docs/书法/书法/《兜沙经》书法.md
@@ -51,7 +51,7 @@
 
 ---
 
-## 为四面如是辈
+## 为四面如
 
 ![Image_017]( https://gitcode.net/xu180/document/-/raw/master/imgs/shufa/doushajing/Image_017.jpg )
 
