--- a/docs/书法/书法/《兜沙经》书法.md
+++ b/docs/书法/书法/《兜沙经》书法.md
@@ -2,12 +2,11 @@
 
 <br />
 
-```
-唐无名氏兜沙经，无款识，故宫博物院藏，署有唐天佑四年（９０７）年号， 为唐代写经中的珍稀之物。
-其书法与唐代楷书主流一脉相承，谨严有法，骨体挺拔，具北碑风规，为唐写经中的珍稀之物。
-首页下端钤“赵氏子昂”、 “松雪斋印”。知曾经赵孟頫鉴藏。
 
-```
+- 唐无名氏兜沙经，无款识，故宫博物院藏，署有唐天佑四年（９０７）年号， 为唐代写经中的珍稀之物。
+- 其书法与唐代楷书主流一脉相承，谨严有法，骨体挺拔，具北碑风规，为唐写经中的珍稀之物。首页下端钤“赵氏子昂”、 “松雪斋印”。知曾经赵孟頫鉴藏。
+
+
 
 ---
 
