--- a/docs/关于我.md
+++ b/docs/关于我.md
@@ -25,7 +25,7 @@
 
 起初&ensp;对书法有兴趣 <br/>
 开始练字&ensp;找个地方记录练习历程 <br/>
-左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://xushufa.cn/%E7%BB%83%E4%B9%A0/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89.html )》 <br/>
+左思右想&ensp;`项目`取名叫做《[书法练习轨迹]( https://xushufa.cn/%E8%BD%A8%E8%BF%B9/%E4%B9%A6%E6%B3%95%E7%BB%83%E4%B9%A0%E8%BD%A8%E8%BF%B9--%E6%98%8E%E6%9C%88%E5%87%A0%E6%97%B6%E6%9C%89-%E6%97%A0%E5%9B%BE%E7%89%88.html )》 <br/>
 
 后来&ensp;内容变多  <br/>
 倾诉欲更强&ensp;注册了公众号 <br/>
